--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -50,6 +50,7 @@ h2 {
 	margin: 0 auto;
 	background-color: #FAF6EB;
 	padding: 40px;
+	overflow: auto;
 }
 
 .infobar {
@@ -85,7 +86,7 @@ select {
 	height: 30px;
 }
 
-.red {
+.red, p.error {
 	color: #99173C;
 }
 
@@ -182,4 +183,8 @@ td {
 .ui-widget-header {
 	background: #555152;
 	border: 1px solid #2E2633;
+}
+
+p.error {
+	font-size: 13px;
 }
