--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -46,7 +46,7 @@ h2 {
 
 .page_main {
 	width: 968px;
-	min-height: 400px;
+	min-height: 375px;
 	margin: 0 auto;
 	background-color: #FAF6EB;
 	padding: 40px;
@@ -190,24 +190,14 @@ p.error {
 }
 
 .footer {
-	width: ;
 	background-color: #2E2633;
-	height: 50px;
+	height: 25px;
 	padding: 20px;
 }
 
-.footer h1 { /*font-family: snippet, sans-serif;*/
-	font-family: philosopher, sans-serif;
+.footer p { 
 	color: #FAF6EB;
-	font-size: 18px;
-	margin: 0px 10px 10px 160px;
-	padding: 0;
-}
-
-.footer p { /*font-family: snippet, sans-serif;*/
-	font-family: philosopher, sans-serif;
-	color: #FAF6EB;
-	font-size: 8px;
+	font-size: 13px;
 	margin: 0px 10px 10px 160px;
 	padding: 0;
 }
